# chill

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release_checklist.md  rustfmt.toml
NEW/: error.rs  nok_response.rs  path.rs  revision.rs
NEW/action/: mod.rs
NEW/transport/: mod.rs
OLD/src/: design.rs  error.rs  lib.rs  test_macro.rs
OLD/src/action/: mod.rs  update_document.rs
OLD/tests/: actions.rs
doc/v0.1.0/: search-index.js
doc/v0.1.0/chill/: enum.Error.html  index.html  sidebar-items.js  struct.Client.html  struct.Document.html  struct.ErrorResponse.html  struct.Revision.html  trait.IntoUrl.html
doc/v0.1.1/: search-index.js
doc/v0.1.1/chill/: enum.Error.html  enum.ViewResponse.html  index.html  sidebar-items.js  struct.Client.html  struct.Document.html  struct.ErrorResponse.html  struct.ReducedView.html  struct.Revision.html  struct.UnreducedView.html  struct.ViewRow.html  trait.IntoUrl.html
doc/v0.1.2/: search-index.js
doc/v0.1.2/chill/: enum.Attachment.html  (+12 more)
doc/v0.2.0/: search-index.js
doc/v0.2.1/: search-index.js
doc/v0.3.0/: search-index.js
src/: attachment.rs  attachment_name.rs  client.rs  create_database_options.rs  create_document_options.rs  database.rs  database_name.rs  design.rs  design_document_name.rs  document.rs  document_id.rs  error.rs  lib.rs  local_document_name.rs  normal_document_name.rs  option.rs  path.rs  read_document_options.rs  revision.rs  serializable_base64_blob.rs  serializable_content_type.rs  serializable_document.rs  test_macro.rs  view.rs  write_document_response.rs
src/OLD-transport/: mod.rs
src/action/: create_database.rs  create_document.rs  delete_document.rs  execute_view.rs  mod.rs  read_all_documents.rs  read_document.rs  update_document.rs
src/dbtype/: error_response.rs  mod.rs  test_macro.rs
src/path/: attachment_path.rs  database_path.rs  database_view_path.rs  design_document_path.rs  document_id.rs  document_path.rs  mod.rs  view_path.rs
src/testing/: fake_server.rs  mod.rs
src/transport/: mod.rs  net.rs  production.rs  request.rs  testing.rs
tests/: actions.rs
(+677 files in other folders)
