[package]
name = "chill"
version = "0.4.0-master"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Client-side CouchDB library"
repository = "https://github.com/chill-rs/chill"
documentation = "https://chill-rs.github.io/chill/doc/v0.3.0/chill/"
keywords = ["couchdb", "database", "nosql"]

[dependencies]
base64 = "0.6.0"
regex = "0.2.2"
serde = "0.8"
serde_json = "0.8"
tempdir = "0.3"
url = "1"

[dependencies.mime]
version = "0.2"
features = ["serde"]

[dependencies.hyper]
version = "0.9"
features = ["serde-serialization"]

[dependencies.uuid]
version = "0.5.1"
features = ["serde"]
