[package]
name = "chill"
version = "0.4.0-master"
authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Client-side CouchDB library"
repository = "https://github.com/chill-rs/chill"
documentation = "https://chill-rs.github.io/chill/doc/v0.3.0/chill/"
keywords = ["couchdb", "database", "nosql"]

[dependencies]
base64 = "0.6.0"
futures = "0.1.14"
mime = "0.3.2"
regex = "0.2.2"
reqwest = "0.6.2"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
tempdir = "0.3.5"
url = "1.5"
uuid = "0.5.1"

[dev-dependencies]
hyper = "0.11.1"
